# SDM_Plugin_3DTiles

./: CMakeLists.txt  LICENSE.md  README.md  main.py  python_plugin.manifest  vcpkg.json
3dtiles-plugin/: 3dtiles-plugin.fbp  CMakeLists.txt  threeDTilesAction.cpp  threeDTilesAction.hpp  threeDTilesDialog.cpp  threeDTilesDialog.h  threeDTilesDialogImpl.cpp  threeDTilesDialogImpl.h
3dtilesdownloader/: .gitignore  README.md  main.py  requirements.txt
3dtilesdownloader/scripts/: get_tileset.py
3dtilesdownloader/src/: bounding_volume.py  tile.py
scripts/: get_tileset.py
